--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,12 @@
   box-sizing: border-box;
 }
 
+html {
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+}
+
 body {
   font-size: 0.9375rem;
   font-family: "Poppins", sans-serif;
@@ -52,8 +58,10 @@ section p {
 section img {
   float: right;
   display: block;
-  max-width: 100vw;
+  width: 15%;
   height: 4rem;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .supervisor {
@@ -73,9 +81,9 @@ section img {
 }
 
 .container {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
+  display: grid;
+  grid-template-columns: auto;
+  grid-gap: 1.5rem;
 }
 
 footer {
@@ -90,9 +98,6 @@ footer a {
   .text {
     text-align: center;
   }
-  .text h1 {
-    color: hsl(234, 12%, 34%);
-  }
   .text .main_text {
     max-width: 40rem;
     margin: 0 auto;
@@ -100,9 +105,9 @@ footer a {
   }
   .container {
     margin: auto;
-    display: grid;
     align-items: center;
     grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, auto);
     padding: 1rem 3rem;
   }
   .supervisor {
