--- a/styles.scss
+++ b/styles.scss
@@ -23,6 +23,11 @@ $ff: 'Poppins', sans-serif;
     padding: 0;
     box-sizing: border-box;
 }
+html {
+    -moz-text-size-adjust: none;
+    -webkit-text-size-adjust: none;
+    text-size-adjust: none;
+  }
 body{
     font-size: .9375rem;
     font-family: $ff;
@@ -66,8 +71,9 @@ section{
     img{
         float: right;
         display: block;
-        max-width: 100vw;
+        width: 15%;
         height: 4rem;
+        object-fit: contain;
     }
     
 }
@@ -85,9 +91,9 @@ section{
 }
 
 .container{
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
+    display: grid;
+    grid-template-columns: auto;
+    grid-gap: 1.5rem;
 }
 
 footer{ font-size: 11px; text-align: center; 
@@ -97,9 +103,6 @@ footer{ font-size: 11px; text-align: center;
 @media (min-width:43.75rem){
     .text{
         text-align: center;
-        h1{
-            color: $Dark_Blue;
-        }
         .main_text{
             max-width: 40rem;
             margin: 0 auto;
@@ -108,11 +111,10 @@ footer{ font-size: 11px; text-align: center;
     }
     .container{
         margin: auto;
-        display: grid;
         align-items: center;
         grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(4, auto);
         padding: 1rem 3rem;
-
     }
     .supervisor{
         grid-row: 1/7;
